--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "*",
-        "ext-pdo": "*"
+        "livewire/livewire": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
