--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME=clone-google-cloud
+APP_ENV=production
+APP_KEY=base64:lWos8AmKCAyB77jPbFTGQ23zOxzS+TchMHTF4FtG7y8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://clone-google-cloud-production.up.railway.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
