--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,13 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
-    }
+    },
+    "builds": [
+        { "src": "api/index.php", "use": "@vercel/php" },
+        { "src": "public/build/**", "use": "@vercel/static" }
+    ],
+    "routes": [
+        { "src": "/build/(.*)", "dest": "public/build/$1" },
+        { "src": "/(.*)", "dest": "api/index.php" }
+    ]
 }
