--- a/railway.toml
+++ b/railway.toml
@@ -20,7 +20,8 @@ cmds = [
   "php artisan config:clear",
   "php artisan cache:clear",
   "php artisan route:clear",
-  "php artisan view:clear"
+  "php artisan view:clear",
+  "php artisan migrate --force"
 ]
 
 [start]
