--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
     "version": 2,
     "framework": null,
-    "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.7.0" }
-    },
     "routes": [{
         "src": "/(.*)",
         "dest": "/api/index.php"
@@ -24,5 +21,8 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
-    }
+    },
+    "builds": [
+        { "src": "Dockerfile", "use": "@vercel/docker" }
+    ]
 }
