--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
     "build": {
         "dockerfile": "Dockerfile"
-    }
+    },
+    "functions": {
+        "api/index.php": {
+            "runtime": "vercel-php@0.7.4"
+        }
+    },
+    "routes": [
+        { "src": "/(.*)", "dest": "/api/index.php" }
+    ]
 }
