--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "build": {
-        "dockerfile": "Dockerfile"
-    },
+    "builds": [
+        { "src": "public/index.php", "use": "@vercel/php" }
+    ],
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.7.4"
