--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,15 @@
 [build]
-builder = "Dockerfile"
+builder = "herokuish"
 
+[phases.build]
 cmds = [
+  # Install PHP dependencies
   "composer install --no-dev --optimize-autoloader",
+  
+  # Install Node & build assets
   "npm install",
   "npm run build"
 ]
 
 [deploy]
-startCommand = "apache2-foreground"
-
+startCommand = "php artisan serve --host=0.0.0.0 --port=$PORT"
