--- a/railway.toml
+++ b/railway.toml
@@ -9,4 +9,4 @@ cmds = [
 ]
 
 [deploy]
-startCommand = "php artisan serve --host=0.0.0.0 --port=8080"
+startCommand = php artisan serve --host=0.0.0.0 --port=$PORT
