--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,6 @@
         }
     },
     "routes": [
-        { "src": "/(.*)", "dest": "/api/index.php" }
+        { "src": "/(.*)", "dest": "/index.html" }
     ]
 }
